--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="title" content="Login - CCM Mathematics" />
+  <meta name="title" content="Login - Canvas Instructure" />
   <meta name="description"
     content="Enhancing mathematical skills with comprehensive courses and resources for problem-solving and analytical thinking." />
   <title>Login - CCM Mathematics</title>
